[project]
name = "pysdb3"
dynamic = ["version"]
description = "SDB structural database manager"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = ["lxml", "pyqt5"]

[project.optional-dependencies]
dev = ["pysdb3", "black"]

[project.urls]
Homepage = "https://github.com/ondrolexa/pysdb"
Repository = "https://github.com/ondrolexa/pysdb.git"
Issues = "https://github.com/ondrolexa/pysdb/issues"

[project.gui-scripts]
pysdb = "pysdb3.mainapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pysdb3/mainapp.py"

[tool.black]
line-length = 88
extend-exclude = '''.*ui_.*'''
